4.2. Поиск дубликатов [#315066 #274072]