@@ -3,11 +3,15 @@ package ru.job4j.io.duplicates;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
 
 public class DuplicatesFinder {
     public static void main(String[] args) throws IOException {
         DuplicatesVisitor visitor = new DuplicatesVisitor();
-        Files.walkFileTree(Path.of("C:\\Users\\User"), visitor);
-        visitor.duplicatesShow();
+        Path start = Paths.get("./");
+        Files.walkFileTree(start, visitor);
+        List<Path> duplicates = visitor.showDuplicates();
+        duplicates.forEach(System.out::println);
     }
 }
